# stitching-multithread

./: .gitignore  CMakeLists.txt  README.md  stitching_demo  test_camera  video_stitching
config/: camera1.yaml  camera2.yaml  camera3.yaml  stitching_config.yaml
documentation/note/: notes_main_page.md
documentation/note/notes/: camera_calibration.md  graph_cut.md  joint_calibration.md  stitching_detail_prompt.md  use_git_submodule.md
documentation/stitching_demo/: stitching_detailed.cpp
include/: Camera.hpp  CameraParams.hpp  MyStitcher.hpp  camera.hpp
old/Stitch_thread/: CMakeLists.txt  readme.md
old/Stitch_thread/src/: Camera_input.cpp  Camera_input.hpp  Est_exposure.cpp  Est_exposure.hpp  Est_seam.cpp  Est_seam.hpp  KeyPoint.cpp  Stitch_frame.cpp  Stitch_frame.hpp  main.cpp
python/: Camera.py  cal.py  caliberation.py  caliberation_result.txt  calibration.py  camera_1.py  camera_2.py  camera_3.py  config.yaml  extrinsics.txt  joint-calibration.py  matrix.yaml  output.yaml  rw_yaml.py  save3image.py  temp.py
source/: Camera.cpp  CameraParams.cpp  MyStitcher.cpp  main.cpp
src/: camera.cpp  main.cpp
test/: CMakeLists.txt  MyStitcher.cpp  MyStitcher.h  MyStitcher.hpp  check_camera.cpp  commands.txt  config.yaml  read_3_camera.cpp  stiching_simple.cpp  stitching_demo.cpp  stitching_demo_cmd.txt  stitching_demo_simplified.cpp  test_camera.cpp  test_camera_class.cpp  test_yaml.cpp  test_yaml_param.cpp
